# CWIN

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
docs/: PRD.md  TECH-DESIGN.md
src/common/: CMakeLists.txt  Config.cpp  Config.h  Log.cpp  Log.h
src/host/: CMakeLists.txt  CapsuleScheduler.cpp  CapsuleScheduler.h  HostWindow.cpp  HostWindow.h  Injector.cpp  Injector.h  main.cpp
src/ipc/: CMakeLists.txt  IpcClient.cpp  IpcClient.h  IpcProtocol.cpp  IpcProtocol.h  IpcServer.cpp  IpcServer.h
src/providers/: CMakeLists.txt  Providers.cpp  Providers.h
src/render/: Backdrop.cpp  Backdrop.h  CMakeLists.txt  Capsule.h  Renderer.cpp  Renderer.h
src/shell/: CMakeLists.txt  TaskbarAdapter.cpp  TaskbarAdapter.h  dllmain.cpp
